docs: build manually

--- a/dev/index.html
+++ b/dev/index.html
@@ -165,7 +165,7 @@ project is to facilitate data-migration from Apple Books to any other platform. 
 Books provides no simple way to do this. Exporting is possible but not ideal and often times
 truncates long annotations.</p>
 <p>Version <code>0.1.x</code> contained the core functionality: (1) save all annotations and notes as JSON (2)
-render them via a custom (or the default) template using the <a href="https://tera.netlify.app/">Tera</a> syntax or (3) backup the
+render them via a custom (or the default) template using the <a href="https://keats.github.io/tera/">Tera</a> syntax or (3) backup the
 current Apple Books databases.</p>
 <p>Note that this repository is a heavy work-in-progress and things are bound to change.</p>
 
