--- a/latest/apple-books/macos/library-location.html
+++ b/latest/apple-books/macos/library-location.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Archive/Restore Library - ReadStor</title>
+        <title>Library Location - ReadStor</title>
 
 
         <!-- Custom HTML head -->
@@ -130,7 +130,7 @@
                         <a href="https://www.github.com/tnahs/readstor" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/apple-books/ios/archive-restore-library.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/tnahs/readstor/edit/main/book/src/apple-books/macos/library-location.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -159,27 +159,42 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="ios---archiverestore-library"><a class="header" href="#ios---archiverestore-library">iOS - Archive/Restore Library</a></h1>
-<p>Archiving and restoring iOS's Apple Books library is fairly straightforward. All the relevant data
-exists in a single folder. A simple drag/drop, copy/paste or zip/unzip should suffice.</p>
+                        <h1 id="macos---library-location"><a class="header" href="#macos---library-location">macOS - Library Location</a></h1>
 <blockquote>
-<p><i class="fa fa-exclamation-circle"></i> When restoring a library make sure that the current
-version of iOS and the version the archive was created from are identical. Not doing so could lead
-to unexpected results.</p>
+<p><i class="fa fa-exclamation-circle"></i> The following information assumes that Apple Books
+syncing with iCloud Drive is disabled!</p>
 </blockquote>
+<p>Apple Books for macOS stores its data in two directories within <code>~/Library/Containers/</code>.</p>
+<h2 id="assets"><a class="header" href="#assets">Assets</a></h2>
+<p>EPUBs, PDFs, Audiobooks, etc. are stored in:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.BKAgentService
+</code></pre>
+<h2 id="databases"><a class="header" href="#databases">Databases</a></h2>
+<p>The books and annotations databases are stored in:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.iBooksX
+</code></pre>
+<p>The books database is located at:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.iBooksX/Data/Documents/BKLibrary/BKLibrary***.sqlite
+</code></pre>
+<p>The annotations database is located at:</p>
+<pre><code class="language-plaintext">~/Library/Containers/com.apple.iBooksX/Data/Documents/AEAnnotation/AEAnnotation***.sqlite
+</code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See <a href="../ios/library-location.html">iOS - Library Location</a> and <a href="../ios/access-library.html">iOS -
-Access Library</a> for more information.</p>
+<p><i class="fa fa-info-circle"></i> Note that the database names will vary therefore <code>***</code> is used
+in the filenames here.</p>
 </blockquote>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../apple-books/ios/access-library.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../apple-books/macos/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../../apple-books/macos/archive-restore-library.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -187,10 +202,13 @@ Access Library</a> for more information.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../apple-books/ios/access-library.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../apple-books/macos/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../../apple-books/macos/archive-restore-library.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
