--- a/dev/apple-books/ios/library-location.html
+++ b/dev/apple-books/ios/library-location.html
@@ -181,7 +181,7 @@ syncing with iCloud Drive is disabled!</p>
  └── ...
 </code></pre>
 <p>Both the EPUBs and plists are stored in:</p>
-<!-- TODO: Where do PDFs and Audiobooks sit? -->
+<!-- TODO(docs): Where do PDFs and Audiobooks sit? -->
 <pre><code class="language-plaintext">[ios-device]/Books
 </code></pre>
 <p>The books plist is located at:</p>
