--- a/dev/apple-books/macos/archive-restore-library.html
+++ b/dev/apple-books/macos/archive-restore-library.html
@@ -164,7 +164,7 @@
 <p><i class="fa fa-info-circle"></i> Complete archive and restore scripts are available in
 <a href="https://github.com/tnahs/readstor/tree/main/scripts/apple-books/">scripts/apple-books</a>.</p>
 </blockquote>
-<!-- TODO: Add a paragraph on what the goal of archiving is. -->
+<!-- TODO(docs): Add a paragraph on what the goal of archiving is. -->
 <h2 id="what-to-archiverestore"><a class="header" href="#what-to-archiverestore">What To Archive/Restore?</a></h2>
 <p>Apple Books for macOS stores its data in two locations:</p>
 <pre><code class="language-plaintext">~/Library/Containers/com.apple.BKAgentService
