--- a/dev/intro/options/backup.html
+++ b/dev/intro/options/backup.html
@@ -174,9 +174,9 @@
 nest a pipe <code>|</code> inside a markdown table. In other words, the default value does not contain
 a backslash.</p>
 </blockquote>
-<p>For example, using the default template, the non-rendered ouput structure would look like the
+<p>For example, using the default template, the non-rendered output structure would look like the
 following:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<pre><code class="language-plaintext">[output-directory]
  └── {{ now | date(format='%Y-%m-%d-%H%M%S') }}-{{ version }}
       ├── AEAnnotation
       │   ├── AEAnnotation*.sqlite
@@ -185,8 +185,8 @@ following:</p>
           ├── BKLibrary*.sqlite
           └── ...
 </code></pre>
-<p>And when rendered, the ouput structure would result in the following:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<p>And when rendered, the output structure would result in the following:</p>
+<pre><code class="language-plaintext">[output-directory]
  └── 2022-10-09-152506-v4.4-5177
      ├── AEAnnotation
      │   ├── AEAnnotation_v10312011_1727_local.sqlite
