--- a/dev/intro/options/export.html
+++ b/dev/intro/options/export.html
@@ -169,8 +169,8 @@
 <tr><td>Example</td><td><code>Robert Henri - The Art Spirit</code></td></tr>
 </tbody></table>
 </div>
-<p>For example, using the default template, the non-rendered ouput structure would look like the following:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<p>For example, using the default template, the non-rendered output structure would look like the following:</p>
+<pre><code class="language-plaintext">[output-directory]
  ├── {{ book.author }} - {{ book.title }}
  │    ├── book.json
  │    └── annotations.json
@@ -179,8 +179,8 @@
  │    └── ...
  └── ...
 </code></pre>
-<p>And when rendered, the ouput structure would result in the following:</p>
-<pre><code class="language-plaintext">[ouput-directory]
+<p>And when rendered, the output structure would result in the following:</p>
+<pre><code class="language-plaintext">[output-directory]
  ├── Krishnamurti - Think on These Things
  │   ├── annotations.json
  │   └── book.json
